Rebrand as Ghawdex Engineering Solar Analyzer for Malta
- Updated project name and branding to Ghawdex Engineering
- Changed focus from Google demo to professional Malta solar analyzer
- Updated default location from Palo Alto, CA to House of Representatives, Valletta, Malta
- Removed Google Analytics and references
- Updated README.md, package.json, titles, and descriptions
- Maintained all technical functionality while rebranding

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "solar-potential",
+  "name": "ghawdex-solar-analyzer",
   "version": "1.0.0",
+  "description": "Ghawdex Engineering Solar Analyzer for Malta - Professional solar potential analysis tool",
+  "author": "Ghawdex Engineering",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
