Major UI Redesign: Professional solar installation sales tool
- Removed all dropdown/expandable menus for direct visibility
- Added prominent Feed-in Tariff calculator (€0.15/kWh vs €0.105/kWh)
- Integrated BOV financing calculator (0.5% interest)
- Added professional branding and contact CTAs
- Simplified interface focused on conversion
- Added WhatsApp and phone contact integration
- Created dashboard with always-visible metrics
- Removed technical/developer-focused elements
- Updated branding to SolarScan Malta
- Enhanced SEO and accessibility

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ghawdex-solar-analyzer",
-  "version": "1.0.0",
-  "description": "Ghawdex Engineering Solar Analyzer for Malta - Professional solar potential analysis tool",
-  "author": "Ghawdex Engineering",
+  "name": "solarscan-malta",
+  "version": "2.0.0",
+  "description": "SolarScan Malta - Professional Solar Analysis & Installation Services",
+  "author": "SolarScan Malta",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
